--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@google/generative-ai": "^0.24.1",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.90.1",
     "next": "16.1.1",
     "pg": "^8.16.3",
     "react": "19.2.3",
