Add research system with validation, API, UI, and 100x game speed for testing

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "path": "/api/cron/buildings",
       "schedule": "* * * * *"
+    },
+    {
+      "path": "/api/cron/research",
+      "schedule": "* * * * *"
     }
   ]
 }
